--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,11 @@ android {
 }
 
 dependencies {
+    implementation 'org.litepal.android:java:3.0.0'
+    implementation("com.squareup.okhttp3:okhttp:4.2.0")
+    implementation "com.google.code.gson:gson:2.7"
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.1.0'
